Fixing overflow issue during scrolling.

--- a/assets/site/css/styles.css
+++ b/assets/site/css/styles.css
@@ -28,6 +28,7 @@ body.js .js-hide {
 section {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .no-overflow {
   overflow: hidden;
